cmake_minimum_required(VERSION 3.28.1)
project(etcdf VERSION 0.0.1 LANGUAGES C CXX)
mark_as_advanced(CMAKE_MAKE_PROGRAM)
include(GNUInstallDirs)
include(CMakePrintHelpers)
include(FetchContent)

set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(THREADS_PREFER_PTHREAD_FLAG ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_compile_options(-fexperimental-library)

if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
    set(IS_ROOT_PROJECT ON)
else()
    set(IS_ROOT_PROJECT OFF)
endif()

option(ETCDF_BUILD_TESTS "build tests" ${IS_ROOT_PROJECT})
if(ETCDF_BUILD_TESTS)
    set(LIBETCDF_BUILD_TESTS ON)
    enable_testing()
endif()
option(BUILD_ETCDFCLI "build cli" ${IS_ROOT_PROJECT})

macro (install)
endmacro ()
include("${CMAKE_CURRENT_SOURCE_DIR}/CMakeUtils.txt")
include("${CMAKE_CURRENT_SOURCE_DIR}/vendor/googletest.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/vendor/ipaddress.cmake")
add_subdirectory("src/libetcdf")
add_subdirectory("src/etcdf_server")
if (BUILD_ETCDFCLI)
    add_subdirectory("src/etcdf_cli")
endif()
